@@ -297,6 +297,14 @@ HKCU\Software\TortoiseSVN\OwnerdrawnMenus
 				</blockquote>
 			</para>
 		</sect2>
+		<sect2 id="tsvn-faq-installation-10">
+		<title>Where is the spellchecker?</title>
+		<para>
+		If you want to use a spellchecker when entering your log messages
+		please follow the installation instructions here: 
+		<xref linkend="tsvn-ch-1-sect-4" />
+		</para>
+		</sect2>
 	</sect1>
 	<!-- ================================================================= -->
 	<!-- ======================== SECTION 2 ============================== -->
